@@ -42,7 +42,7 @@ public class CatchControlProjection extends AbstractControlNode<ControlToken> im
 
     @Override
     public List<Node<?>> getPredecessors() {
-        return Collections.singletonList(getControl());
+        return List.of(getControl());
     }
 
 
