@@ -22,7 +22,7 @@ public class MemoryProjection extends AbstractNode<MemoryToken> implements Proje
 
     @Override
     public List<Node<?>> getPredecessors() {
-        return Collections.singletonList(getControl());
+        return List.of(getControl());
     }
 
     @Override
