@@ -28,7 +28,7 @@ public class PhiNode<V extends QType> extends AbstractNode<V> {
 
     @Override
     public List<Node<?>> getPredecessors() {
-        return Collections.singletonList(getControl());
+        return List.of(getControl());
     }
 
     @Override
